--- a/views/blog_template.html
+++ b/views/blog_template.html
@@ -3,6 +3,12 @@
 <head>
 <title>My Blog</title>
 </head>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+<script type="text/javascript"
+	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 <body>
 
 {% if username %}
