--- a/views/blog_template.html
+++ b/views/blog_template.html
@@ -55,6 +55,25 @@
         font-size: 18px;
         line-height: 24px;
       }
+      
+      /* Video pitch and Action */
+      .pitch {
+      padding: 2.5% 0%;
+      }
+      .order {
+      padding: 2% 0%;
+      }
+      .actions {
+      background-color: #343434;
+      padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
+      text-align: center;
+      }
+      .statistics h3, .statistics p {
+      color: white;
+      }
+      
       /* Marketing Copy and Footer */
       .copy {
         padding-top: 2.5%;
@@ -115,26 +134,40 @@
       </div>
    </div>
 
-<h1>My Blog</h1>
+<div class="row-fluid heading">
+  <div class="span12">
+    <h1>POINT: Post Insight</h1>
+    </div>
+  </div>
+</div>
+<div class="row-fluid subheading">
+  <div class="span12">
+    <p class="lead">Represent the detail of achievements of the past generation as well as our own.</p>
+</div>
+</div>
 
 {% for post in myposts %}
-<h2><a href="/post/{{post['permalink']}}">{{post['title']}}</a></h2>
-Posted {{post['date']}} <i>By {{post['author']}}</i><br>
-Comments:
-<a href="/post/{{post['permalink']}}">{{post['comments']|length}}</a>
-<hr>
-{% autoescape false %}
-{{post['body']}}
-{% endautoescape %}
-<p>
-<p>
-<em>Filed Under</em>:
-{% for tag in post.tags %}
-    {% if loop.first %}
-        <a href="/tag/{{tag}}">{{tag}}</a>
-    {% else %}
-        , <a href="/tag/{{tag}}">{{tag}}</a>
-    {% endif %}
+<div class="row-fluid section2">
+  <div class="span5 offset1 copy copy-right">
+    <h2><a href="/post/{{post['permalink']}}">{{post['title']}}</a></h2>
+    Posted {{post['date']}} <i>By {{post['author']}}</i><br>
+    Comments:
+    <a href="/post/{{post['permalink']}}">{{post['comments']|length}}</a>
+    <hr>
+    {% autoescape false %}
+    {{post['body']}}
+    {% endautoescape %}
+    <p>
+    <p>
+      <em>Filed Under</em>:
+      {% for tag in post.tags %}
+      {% if loop.first %}
+      <a href="/tag/{{tag}}">{{tag}}</a>
+      {% else %}
+      , <a href="/tag/{{tag}}">{{tag}}</a>
+      {% endif %}
+  </div>
+</div>
 {% endfor %}
 {% endfor %}
 <p>
