--- a/views/blog_template.html
+++ b/views/blog_template.html
@@ -98,13 +98,14 @@
       margin: 0 auto;
       }
     </style>
-</head>
+
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
 </script>
 <script type="text/javascript"
 	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
+</head>
 <body>
    <div class="navbar navbar-inverse navbar-fixed-top">
      <div class="navbar-inner">
@@ -115,7 +116,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Technology Magazine</a>
+          <a class="brand" href="/">Technology Magazine</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
