--- a/views/entry_template.html
+++ b/views/entry_template.html
@@ -1,60 +1,181 @@
-<!doctype HTML>
-<html
-<head>
-<title>
-Blog Post
-</title>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
-<script type="text/javascript"
-	src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-</head>
-<body>
-{% if username %}
-Welcome {{username}}        <a href="/logout">Logout</a> | <a href="/newpost">New Post</a><p>
-{% else %}
-You are not logged in!        <a href="/login">Login</a> | <a href="/signup">Sign Up</a><p>
-{% endif %}
-<a href="/">Blog Home</a><br><br>
-
-<h2>{{post['title']}}</h2>
-Posted {{post['date']}}<i> By {{post['author']}}</i><br>
-<hr>
-{% autoescape false %}
-{{post['body']}}
-{% endautoescape %}
-<p>
-<em>Filed Under</em>:
-{% for tag in post.tags %}
-    {% if loop.first %}
-        <a href="/tag/{{tag}}">{{tag}}</a>
-    {% else %}
-        , <a href="/tag/{{tag}}">{{tag}}</a>
-    {% endif %}
-{% endfor %}
-<p>
-Comments:
-<ul>
-{% for comment in post.comments %}
-Author: {{comment['author']}}<br>
-{{comment['body']}}<br>
-<hr>
-{% endfor %}
-<h3>Add a comment</h3>
-<form action="/newcomment" method="POST">
-<input type="hidden" name="permalink", value="{{post['permalink']}}">
-<h4>{{errors}}</h4>
-<b>Name</b> (required)<br>
-<input type="text" name="commentName" size="60" value="{{comment['name']}}"><br>
-<b>Email</b> (optional)<br>
-<input type="text" name="commentEmail" size="60" value="{{comment['email']}}"><br>
-<b>Comment</b><br>
-<textarea name="commentBody" cols="60" rows="10">{{comment['body']}}</textarea><br>
-<input type="submit" value="Submit">
-</ul>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Technology Magazine</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
+          rel="stylesheet" type="text/css">
+    <style type="text/css">
+      /* Large desktop */
+      @media (min-width: 980px) {
+      body {
+      padding-top: 60px;
+      }
+      .linediv-l {
+      border-right: 1px white solid;
+      }
+      .linediv-r {
+      border-left: 1px white solid;
+      }
+      }
+      /* Landscape phones and down */
+      @media (max-width: 480px) {
+      .copy {
+      padding: 2.5% 10%;
+      }
+      .linediv-l {
+      border-bottom: 1px white solid;
+      }
+      .linediv-r {
+      border-top: 1px white solid;
+      }
+      }
+      /* All form factors */
+      /* Main body and headings */
+      body{
+      font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      }
+      .heading, .subheading {
+      font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+      text-align: center;
+      }
+      p.lead {
+      padding-top: 1.5%;
+      font-size: 24px;
+      line-height: 30px;
+      }
+      p {
+      font-size: 18px;
+      line-height: 24px;
+      }
+      
+      /* Video pitch and Action */
+      .pitch {
+      padding: 2.5% 0%;
+      }
+      .order {
+      padding: 2% 0%;
+      }
+      .actions {
+      background-color: #343434;
+      padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
+      text-align: center;
+      }
+      .statistics h3, .statistics p {
+      color: white;
+      }
+      
+      /* Marketing Copy and Footer */
+      .copy {
+      padding-top: 2.5%;
+      padding-bottom: 2.5%;
+      text-align: justify;
+      }
+      .asset {
+      padding: 2.5% 0%;
+      }
+      .footer {
+      color: #cccccc;
+      text-align: center;
+      }
+      .footer p {
+      font-size: 11px;
+      }
+      .footer a {
+      color: #ccccff;
+      }
+      div.addthis_toolbox{
+      width:180px;
+      margin: 0 auto;
+      }
+    </style>
+    
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+    <script type="text/javascript"
+            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+    </head>
+  
+  <body>
+       <div class="navbar navbar-inverse navbar-fixed-top">
+     <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/">Technology Magazine</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="/">Home</a></li>
+	      {% if username %}
+	      <li>Welcome {{username}}</li>
+	      <li><a href="/newpost">New Post</a></li>
+	      <li><a href="/logout">Logout</a></li>
+	      {% else %}
+	      <li>You are not logged in!</li>
+	      <li><a href="/login">Login</a></li>
+              <li><a href="/signup">Sign Up</a></li>
+	      {% endif %}
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+     </div>
+   </div>
+       
+       <div class="row-fluid">
+	 <div class="span12 offset1">
+	   <h2>{{post['title']}}</h2>
+	   Posted {{post['date']}}<i> By {{post['author']}}</i><br>
+	   <hr>
+	   {% autoescape false %}
+	   {{post['body']}}
+	   {% endautoescape %}
+       <p>
+	 <em>Filed Under</em>:
+	 {% for tag in post.tags %}
+	 {% if loop.first %}
+	 <a href="/tag/{{tag}}">{{tag}}</a>
+	 {% else %}
+	 , <a href="/tag/{{tag}}">{{tag}}</a>
+	 {% endif %}
+	 {% endfor %}
+       <p>
+	 Comments:
+	 <ul>
+	   {% for comment in post.comments %}
+	   Author: {{comment['author']}}<br>
+	   {{comment['body']}}<br>
+	   <hr>
+	   {% endfor %}
+	   <h3>Add a comment</h3>
+	   <form action="/newcomment" method="POST">
+	     <input type="hidden" name="permalink", value="{{post['permalink']}}">
+	     <h4>{{errors}}</h4>
+	     <b>Name</b> (required)<br>
+	     <input type="text" name="commentName" size="60" value="{{comment['name']}}"><br>
+	     <b>Email</b> (optional)<br>
+	     <input type="text" name="commentEmail" size="60" value="{{comment['email']}}"><br>
+	     <b>Comment</b><br>
+	     <textarea name="commentBody" cols="60" rows="10">{{comment['body']}}</textarea><br>
+	     <input type="submit" value="Submit">
+	 </ul>
+	 </div>
+       </div>
+  </body>
 </html>
 
 
