--- a/views/signup.html
+++ b/views/signup.html
@@ -1,75 +1,246 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <title>Sign Up</title>
+    <meta charset="utf-8">
+    <title>Technology Magazine</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"
+          rel="stylesheet" type="text/css">
     <style type="text/css">
       .label {text-align: right}
       .error {color: red}
     </style>
-
+    <style type="text/css">
+      /* Large desktop */
+      @media (min-width: 980px) {
+      body {
+      padding-top: 60px;
+      }
+      .linediv-l {
+      border-right: 1px white solid;
+      }
+      .linediv-r {
+      border-left: 1px white solid;
+      }
+      }
+      /* Landscape phones and down */
+      @media (max-width: 480px) {
+      .copy {
+      padding: 2.5% 10%;
+      }
+      .linediv-l {
+      border-bottom: 1px white solid;
+      }
+      .linediv-r {
+      border-top: 1px white solid;
+      }
+      }
+      /* All form factors */
+      /* Main body and headings */
+      body{
+      font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      }
+      .heading, .subheading {
+      font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+      text-align: center;
+      }
+      p.lead {
+                                        padding-top: 1.5%;
+      font-size: 24px;
+      line-height: 30px;
+      }
+      p {
+      font-size: 18px;
+      line-height: 24px;
+      }
+      
+      /* Video pitch and Action */
+      .pitch {
+      padding: 2.5% 0%;
+      }
+      .order {
+      padding: 2% 0%;
+      }
+      .actions {
+      background-color: #343434;
+      padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
+      text-align: center;
+      }
+      .statistics h3, .statistics p {
+      color: white;
+      }
+      
+      /* Marketing Copy and Footer */
+      .copy {
+      padding-top: 2.5%;
+      padding-bottom: 2.5%;
+      text-align: justify;
+      }
+      .asset {
+      padding: 2.5% 0%;
+      }
+                                    .footer {
+      color: #cccccc;
+      text-align: center;
+      }
+      .footer p {
+      font-size: 11px;
+      }
+      .footer a {
+      color: #ccccff;
+      }
+      div.addthis_toolbox{
+      width:180px;
+      margin: 0 auto;
+      }
+    </style>
+    
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+    <script type="text/javascript"
+            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
   </head>
-
   <body>
-    Already a user? <a href="/login">Login</a><p>
-    <h2>Signup</h2>
-    <form method="post">
-      <table>
-        <tr>
-          <td class="label">
-            Username
-          </td>
-          <td>
-            <input type="text" name="username" value="{{username}}">
-          </td>
-          <td class="error">
-	    {{username_error}}
-            
-          </td>
-        </tr>
-
-        <tr>
-          <td class="label">
-            Password
-          </td>
-          <td>
-            <input type="password" name="password" value="">
-          </td>
-          <td class="error">
-	    {{password_error}}
-            
-          </td>
-        </tr>
-
-        <tr>
-          <td class="label">
-            Verify Password
-          </td>
-          <td>
-            <input type="password" name="verify" value="">
-          </td>
-          <td class="error">
-	    {{verify_error}}
-            
-          </td>
-        </tr>
-
-        <tr>
-          <td class="label">
-            Email (optional)
-          </td>
-          <td>
-            <input type="text" name="email" value="{{email}}">
-          </td>
-          <td class="error">
-	    {{email_error}}
-            
-          </td>
-        </tr>
-      </table>
-
-      <input type="submit">
-    </form>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/">Technology Magazine</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li>Already a user? <a href="/login">Login</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+  <body>
+    
+    <div class="row-fluid pitch">
+      <div class="span5 offset1 video">
+        <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/jrFEh7Q.jpg">
+      </div>
+      <div class="span5 actions">
+        <div class="span8 offset2">
+          <div class="row-fluid statistics">
+	    <div class="linediv-c"><h3>Signup</h3></div>
+	    <form method="post">
+	      <table>
+		<tr>
+		  <td class="label">
+		    Username
+		  </td>
+		  <td>
+		    <input type="text" name="username" value="{{username}}">
+		  </td>
+		  <td class="error">
+		    {{username_error}}
+		    
+		  </td>
+		</tr>
+		
+		<tr>
+		  <td class="label">
+		    Password
+		  </td>
+		  <td>
+		    <input type="password" name="password" value="">
+		  </td>
+		  <td class="error">
+		    {{password_error}}
+		    
+		  </td>
+		</tr>
+		
+		<tr>
+		  <td class="label">
+		    Verify Password
+		  </td>
+		  <td>
+		    <input type="password" name="verify" value="">
+		  </td>
+		  <td class="error">
+		    {{verify_error}}
+		    
+		  </td>
+		</tr>
+		
+		<tr>
+		  <td class="label">
+		    Email (optional)
+		  </td>
+		  <td>
+		    <input type="text" name="email" value="{{email}}">
+		  </td>
+		  <td class="error">
+		    {{email_error}}
+		  </td>
+		</tr>
+	      </table>
+	      <input type="submit">
+	    </form>
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid faq">
+	<div class="span10 offset1">
+          <h3>FAQ</h3>
+          <div class="accordion" id="accordion2">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse"
+                   data-parent="#accordion2" href="#collapseOne">
+                  contact us
+                        </a>
+              </div>
+              <div id="collapseOne" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  contactus@technologymag.org
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+                  <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse"
+                       data-parent="#accordion2" href="#collapseTwo">
+                      who are we?
+                        </a>
+                  </div>
+                    <div id="collapseTwo" class="accordion-body collapse">
+                      <div class="accordion-inner">
+                        We are enthusiastic chinese Post-85s.
+                      </div>
+                    </div>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+      <div class="row-fluid footer">
+	<div class="span12">
+          <p>This work is licensed under
+            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+              By-SA 3.0
+              </a>, without all the cruft that would otherwise be
+            put at the bottom of the page.</p>
+        </div>
+      </div>
+    </div>
+    
   </body>
-
 </html>
