--- a/views/newpost_template.html
+++ b/views/newpost_template.html
@@ -120,7 +120,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Technology Magazine</a>
+                    <a class="brand" href="/">Technology Magazine</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="/">Home</a></li>
